# n8n

./: .bash_aliases  .coverage  .env  .gitignore  .gitmodules  .oxlintrc.json  CLAUDE.md  NOTRAEFIKCOMPOSE.txt  README.md  bunfig.toml  docker-compose.yml  install-service.sh  n8n-config.json  n8n.service  n8n.sh  nohup.out  package.json  pixi.toml  pyproject.toml  pyrightconfig.json  ruff.toml  serve-n8n.sh  serve.sh  style.css  test_manual.py  tsconfig.json
.convos/: conversation_0.txt  conversation_1.txt
docs/: potential-consultants.md
python/: notebook.ipynb  pyproject.toml
python/common/: __init__.py  document.py  input.py  metadata.py  output.py  parsehtml.py  runner.py  samples.py  temp.py
python/eserv/: __init__.py  download.py  extract.py  main.py  pyproject.toml  serialize.py  store.py
python/lib/: args.py  output.py  soup.py
python/n8n.python.egg-info/: PKG-INFO  SOURCES.txt
python/n8n_py/: __init__.py  __main__.py  download.py  extract.py  main.py  resolve.py  serialize.py  store.py
python/n8n_py/extractor/: __init__.py  cls.py
python/n8n_py/extractor/lib/: __init__.py  const.py  defs.py  structs.py
python/n8n_py/finder/: __init__.py  cls.py
python/n8n_py/parser/: __init__.py  __main__.py  cls.py
python/parser/: __init__.py  app.py  cls.py
python/py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/src/: __init__.py
python/src/parser/: app.py  cls.py
python/tests/: __init__.py  shared.py  test_extractor.py  test_finder.py  test_main.py  test_parser.py  test_response_utility.py
python/tests/extract/: __init__.py  test_extract_aspnet_form.py  test_extract_content_dispo.py  test_extract_download_info.py  test_extract_post_url.py  test_extract_response_link.py  test_extract_upload_info.py
python/tests/utils/: __init__.py  _samples.py
python/utils/: __init__.py  output.py  soup.py
python/utils/utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: migrate_credentials.py  parse_link.py  parse_names.py  parse_response.py  serve-n8n.mjs  serve-n8n.ps1  server-cmd.py  service.ps1  service.py  service.sh  utils.py
server/: .gitignore  package.json  tsconfig.json
server/src/: constants.mjs  index.mjs  logging.mjs  methods.mjs  utils.mjs
service/: dbx_index.json  package.json
service/backup/credentials/: GitHub_[zaynram].json  Python_Environment_Variables_account.json  dbx_[zramdass].json  gdrive_[ramdasszayn].json  gsheets_[ramdasszayn].json  outlook_[eservice].json  this.json
service/backup/workflows/: Main.json  auto_backup.json  cache_dbx_folder_index.json  fs_auto_upload.json  git_push.json  run_python_module.json  write_credentials_json.json  write_json_file.json  write_workflows_json.json
src/: pyrightconfig.json  setup_console.py
src/automate/: __init__.py  __main__.py
src/automate/app/: __init__.py
src/automate/eserv/: __init__.py  __main__.py  core.py  download.py  enums.py  extract.py  main.py  record.py  upload.py
src/eserv/: __init__.py  __main__.py  core.py  download.py  enums.py  extract.py  main.py  record.py  resolve.py  types.py  upload.py
src/eserv/errors/: __init__.py  _config.py  _core.py  environment.py  pipeline.py
src/eserv/monitor/: __init__.py  client.py  flags.py  processor.py  result.py  types.py
src/eserv/stages/: __init__.py  download.py  types.py  upload.py
src/eserv/types/: __init__.py  enums.py  results.py  structs.py  typechecking.py
src/eserv/util/: __init__.py  config.py  configuration.py  dbx_manager.py  doc_store.py  email_state.py  error_tracking.py  index_cache.py  notifications.py  oauth_manager.py  pdf_utils.py  string_validation.py  target_finder.py  types.py
tests/: TESTING_STANDARDS.md  __init__.py  pyrightconfig.json  test_integration.py  utils.py
tests/eserv/: __init__.py  __main__.py  conftest.py  test_core.py  test_integration.py  test_upload.py
tests/eserv/extract/: test_extract_aspnet_form.py  (+5 more)
xps/: docker-compose.yml
(+42 files in other folders)
