build-system.build-backend = "hatchling.build"
build-system.requires      = ["hatchling"]

[project]

description = "python utilities for n8n workflow automation"
name        = "eserv"
version     = "0.0.1"

authors = [{ name = "zaynram", email = "ramdasszayn@gmail.com" }]
dynamic = ["dependencies", "requires-python"]

[tool]

setuptools.include-package-data = true
setuptools.package-dir          = { "*" = "src" }
setuptools.packages             = ["eserv"]

pyright.extends = "../pyrightconfig.json"
pyright.strict  = ["src/eserv"]

ruff.extend = "../ruff.toml"
ruff.lint.per-file-ignores = { "**/tests/**" = [
    "PLR",
    "ANN001",
    "S101",
    "ANN201",
    "D103",
    "PLC2701",
    "PLC0415",
    "SLF001",
    "FBT001",
    "D102",
    "D101",
    "S106",
    "ARG001",
] }
