build-system.build-backend = "hatchling.build"
build-system.requires      = ["hatchling"]

[project]

description = "python utilities for n8n workflow automation"
name        = "eserv"
version     = "0.0.1"

authors = [{ name = "zaynram", email = "ramdasszayn@gmail.com" }]
dynamic = ["dependencies", "requires-python"]


[tool.setuptools]

include-package-data = true

package-dir = { "*" = "src" }
packages    = ["eserv"]
py-modules  = ["setup_console.py"]

[tool.pytest.ini_options]

tmp_path_retention_count  = 0
tmp_path_retention_policy = "none"
